@@ -5,6 +5,7 @@ OpenLDAP 2.4.21 Engineering
 	Fixed slapd freeing tasks from queue (ITS#6413)
 	Fixed slapd looping with SSL/TLS connections (ITS#6412)
 	Fixed slapd use correct ce_type (ITS#6408)
+	Fixed slapd-ldif access outside database directory (ITS#6414)
 	Fixed slapo-translucent with back-null (ITS#6403)
 	Fixed slapo-unique conflict with ppolicy (ITS#6270)
 	Build Environment
